--- a/education_kit/website/templates/main.html
+++ b/education_kit/website/templates/main.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'styles_for_alerts.css' %}?v=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
         #messages {
@@ -51,6 +52,7 @@
         <!-- Меню для вчителя -->
         <nav class="navbar">
             <a href="">Створити конференцію</a>
+            <a id="meetings-btn">Конференції</a>
             <a id="requests-btn">Запити</a>
             <a id="settings-btn" href="#">Налаштування</a>
             <a href="{% url 'logout' %}">Вийти</a>
@@ -160,6 +162,18 @@
             });
     }
 
+    function loadMeetingsList() {
+        fetch('/meetings_list_partial/')
+            .then(response => response.text())
+            .then(html => {
+                let contentArea = document.getElementById('area');
+                contentArea.innerHTML = html;
+            })
+            .catch(error => {
+                console.error('Error fetching settings:', error);
+            });
+    }
+
     // Встановлюємо першу вкладку при завантаженні сторінки для студента
     if (document.getElementById('lessons-btn')) {
         // loadLessons(); // Завантажуємо уроки
@@ -170,6 +184,7 @@
     document.getElementById('teachers-btn')?.addEventListener('click', loadTeachers);
     document.getElementById('settings-btn')?.addEventListener('click', loadSettings);
     document.getElementById('requests-btn')?.addEventListener('click', loadRequests);
+    document.getElementById('meetings-btn')?.addEventListener('click', loadMeetingsList);
 });
     </script>
 
