--- a/education_kit/website/templates/main.html
+++ b/education_kit/website/templates/main.html
@@ -51,7 +51,7 @@
     {% elif request.session.user_type == 'teacher' %}
         <!-- Меню для вчителя -->
         <nav class="navbar">
-            <a href="">Створити конференцію</a>
+            <a id="create-meetings-btn">Створити конференцію</a>
             <a id="meetings-btn">Конференції</a>
             <a id="requests-btn">Запити</a>
             <a id="settings-btn" href="#">Налаштування</a>
@@ -174,6 +174,18 @@
             });
     }
 
+    function loadMeetings() {
+        fetch('/meetings/')
+            .then(response => response.text())
+            .then(html => {
+                let contentArea = document.getElementById('area');
+                contentArea.innerHTML = html;
+            })
+            .catch(error => {
+                console.error('Error fetching settings:', error);
+            });
+    }
+
     // Встановлюємо першу вкладку при завантаженні сторінки для студента
     if (document.getElementById('lessons-btn')) {
         // loadLessons(); // Завантажуємо уроки
@@ -185,6 +197,7 @@
     document.getElementById('settings-btn')?.addEventListener('click', loadSettings);
     document.getElementById('requests-btn')?.addEventListener('click', loadRequests);
     document.getElementById('meetings-btn')?.addEventListener('click', loadMeetingsList);
+    document.getElementById('create-meetings-btn')?.addEventListener('click', loadMeetings);
 });
     </script>
 
